--- a/LaneDetection/.gitignore
+++ b/LaneDetection/.gitignore
@@ -5,6 +5,10 @@ mlflow_test.py
 __pycache__
 /osm_extraction/cache
 /trajectory_extraction/__pycache__
-/Multiple_ROI_lane_learning_system_for_Highway
 *.xodr
 *.xml
+
+/I43_*
+/US12_Stoughton
+/US12_Whitney
+/US12_JohnNolen
